src/test/deca/context/valid/SansObjet/Mult-readFloat-int.deca
// Description:
//      using readFloat in a plus operation
//
// Results:
//     nothing
//
// Historique:
//    cree le 14/01/2022

{
    int x =  readFloat() * 3 ;
}
