src/test/deca/context/invalid/SansObjet/DeclVar-Greater-float-int-float.deca
// Description:
//    Declaration of a float variable using > operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  17; 
    float y = 10.01; 
    float z = 17 > 10.01; 
}
